fix: onboarding pages header section spacing

--- a/frontend/src/styles/layout/onboarding.sass
+++ b/frontend/src/styles/layout/onboarding.sass
@@ -11,10 +11,14 @@
 	flex-direction: column
 	align-items: center
 
+.onboarding-header
+	margin-bottom: 2rem
+
 .onboarding-heading
 	color: $text-black
 	font-weight: 400
 	text-align: center
+	margin-bottom: 0
 
 	span
 		font-weight: 600
@@ -23,7 +27,7 @@
 	color: $gray-60
 	text-align: center
 	line-height: 20px
-	margin-bottom: 2rem
+	margin-top: 1rem
 
 .onboarding-form
 	width: 416px
